syntax = "proto3";

package proto;

option go_package = "github.com/ProyectoIntegradorSoftware/MicroservicioProducto/src/proto";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}

message CreateProductRequest {
  string nombre = 1;
  string sku = 2;
  string precio = 3;
  string descripcion = 4;
}

message CreateProductResponse {
  string id = 1;
  string nombre = 2;
<<<<<<< HEAD
  string SKU = 3;
=======
  string sku = 3;
>>>>>>> ccb83c3275380a591d1c9b9aae1df80e35191e46
  string precio = 4;
  string descripcion = 5;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
<<<<<<< HEAD
  string id = 1;
  string nombre = 2;
  string SKU = 3;
  string precio = 4;
  string descripcion = 5;
=======
  string nombre = 1;
  string sku = 2;
  string precio = 3;
  string descripcion = 4;
  string id = 5
>>>>>>> ccb83c3275380a591d1c9b9aae1df80e35191e46
}

message UpdateProductRequest {
  string id = 1;
  string nombre = 2;
<<<<<<< HEAD
  string SKU = 3;
=======
>>>>>>> ccb83c3275380a591d1c9b9aae1df80e35191e46
  string precio = 4;
  string descripcion = 5;
}

message UpdateProductResponse {
<<<<<<< HEAD
  string id = 1;
  string nombre = 2;
  string SKU = 3;
  string precio = 4;
  string descripcion = 5;
=======
  
  string nombre = 1;
  string precio = 2;
  string descripcion = 3;
  string id = 4;
>>>>>>> ccb83c3275380a591d1c9b9aae1df80e35191e46
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  string mensaje = 1;
}

message ListProductsRequest {
}

message ListProductsResponse {
  repeated Product products = 1;
}

message Product{
<<<<<<< HEAD
  string id = 1;
  string nombre = 2;
  string SKU = 3;
  string precio = 4;
  string descripcion = 5;
=======
  string nombre = 1;
  string sku = 2;
  string precio = 3;
  string descripcion = 4;
  string id = 5;
>>>>>>> ccb83c3275380a591d1c9b9aae1df80e35191e46
}